# SEM3_LABS

./: .gitignore  README.md
Algorithms/: 1.txt  2.txt  2t.txt  2w.txt  2we.txt  3.txt  4.txt
Algorithms/L0/: LAB1.sln
Algorithms/L0/Debug/: LAB1.ilk
Algorithms/L0/LAB1/: 1.txt  3.txt  LAB1.cpp  LAB1.vcxproj  LAB1.vcxproj.filters  ReadMe.txt  stdafx.cpp
Algorithms/L0/LAB1/Debug/: LAB1.pch  vc140.idb
Algorithms/L0/LAB1/Debug/LAB1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LAB1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Algorithms/L0/ipch/LAB1-2cea1420/: LAB1-50745d4c.ipch
Algorithms/L1/: PAA_1.pro  item.cpp  item.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opt_task.cpp  opt_task.h  ~$ПиАА_1.docx  ПиАА_1.docx
Algorithms/L2/: L2.pro  edge.cpp  edge.h  graph.cpp  graph.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  node.cpp  node.h  scene.cpp  ПиАА_2.docx
Algorithms/L2/examples/: 3.txt
Algorithms/L3/: L3.pro  L3.pro.user.0c5772c  L3.pro.user.11c783e  L3.pro.user.cc1a0f0  QSplitter.docx  aboutwindow.ui  edge.cpp  edge.h  graph.cpp  graph.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myself.qrc  node.cpp  node.h  ПиАА_3.docx
Algorithms/L3/doc/: alg.htm  context.htm  form.htm  index.htm
Algorithms/L3/examples/: 1.txt  Chukhnov.txt  Chukhnov2.txt
Algorithms/L4/: L4.pro  edge.cpp  edge.cpp.autosave  edge.h  graph.cpp  graph.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  resource.qrc  scene.h  ~$ПиАА_4.docx  ПиАА_4.docx
Algorithms/L4/doc/: alg.htm  control.htm  files.htm  graph.htm  index.htm
Algorithms/L5/: CMakeLists.txt  build.sh  readme.md
Algorithms/L5/doc/: report.doc
Algorithms/L5/include/: kmp.h  prefix.h
Algorithms/L5/src/: kmp.cpp  lab5.cpp  lab5eff.cpp  lab5shift.cpp  lab5test.cpp  prefix.cpp
Algorithms/L6/: CMakeLists.txt  build.sh  readme.md  reset.sh
Algorithms/L6/doc/: report.doc  report.docx
Algorithms/L6/include/: ahocorasick.h  bohr.h
Algorithms/L6/src/: ahocorasick.cpp  bohr.cpp  lab6.cpp  lab6joker.cpp  lab6tests.cpp
OOP/1/stepik_1_1_4(4)/Debug/stepik_1_1_4(4).tlog/: CL.command.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
OOP/2/: 2.doc  ~$2.doc
OOP/2/stepik_1_2_3/Debug/: stepik_1_2_3.ilk
OOP/2/stepik_1_2_3/ipch/STEPIK_1_2_3-ee6ef3d7/: STEPIK_1_2_3-2fe95c0f.ipch
OOP/2/stepik_1_2_3/stepik_1_2_3/: Circle.cpp  Circle.h  Color.cpp  Color.h  Line.cpp  Line.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  stepik_1_2_3.cpp  stepik_1_2_3.vcxproj  stepik_1_2_3.vcxproj.filters
OOP/2/stepik_1_2_3/stepik_1_2_3/Debug/: stepik_1_2_3.pch  vc140.idb
OOP/3/OOP_L3/: OOP_L3.sln
OOP/3/OOP_L3/OOP_L3/: OOP_L3.cpp  OOP_L3.vcxproj  OOP_L3.vcxproj.filters  stdafx.cpp
OOP/3/OOP_L3/ipch/OOP_L3-a7a53a53/: OOP_L3-ae61f3f8.ipch
OOP/3/OOP_L3_QT/: OOP_L3_QT.pro.user.0c5772c  OOP_L3_QT.pro.user.3c99ba8  main.cpp  vector.hpp
OOP/4/OOP_L4_QT/: list.hpp  main.cpp
OOP/5/: main.cpp
OOP/5/OOP_L5/: debug.hpp  main.cpp  shared_ptr.hpp
OOP/6/: CMakeLists.txt
OOP/6/include/: color.h  pentagon.hpp  point.h  regular_pentagon.hpp  shared_ptr.hpp  vector.hpp
OOP/6/src/: color.cpp  main.cpp  point.cpp  tests.cpp
OS/1/Debug/: stepik_1_1_4(4).ilk
OS/1/ipch/STEPIK_1_1_4(4)-4ac01dd8/: STEPIK_1_1_4(4)-9cea1994.ipch
OS/1/stepik_1_1_4(4)/Debug/: stepik_1_1_4(4).pch  vc140.idb
OS/1/stepik_1_1_4(4)/Debug/stepik_1_1_4(4).tlog/: CL.read.1.tlog  link.command.1.tlog  (+1 more)
(+7 files in other folders)
