cmake_minimum_required(VERSION 3.1)
project(lab5)
set (CMAKE_CXX_STANDARD 11)

find_package(GTest REQUIRED)
include_directories(include ${GTEST_INCLUDE_DIRS})
set (SOURCE src/lab5.cpp src/kmp.cpp src/prefix.cpp)
set (TESTSOURCE src/lab5test.cpp src/kmp.cpp src/prefix.cpp)
set (SHIFTSOURCE src/lab5shift.cpp src/kmp.cpp src/prefix.cpp)
set (EFFSOURCE src/lab5eff.cpp src/kmp.cpp src/prefix.cpp)

if (main)
    add_executable(lab5 ${SOURCE})
endif()
if (shift)
    add_executable(lab5shift ${SHIFTSOURCE})
endif()
if (eff)
    add_executable(lab5eff ${EFFSOURCE})
endif()
if (tests)
    add_executable(lab5test ${TESTSOURCE})
    target_link_libraries(lab5test ${GTEST_LIBRARIES} pthread)
    enable_testing()
    add_test(lab5test "./lab5test")
endif()
